<resources>
    <string name="app_name">LangApp</string>
    <string name="en_to_fr">Anglais -> Français</string>
    <string name="fr_to_en">Français -> Anglais</string>
    <string name="dictionary">Listes de mots</string>
    <string name="history">Historique</string>
    <string name="add_word">Ajouter</string>
    <string name="word_en">Mot (EN)</string>
    <string name="word_fr">Mot (FR)</string>
    <string name="validate">Valider</string>
    <string name="next">Suivant</string>
    <string name="finish">Terminer</string>
    <string name="your_translation">Votre traduction</string>
    <string name="correct_answer">Correct !</string>
    <string name="wrong_answer">Faux. La bonne réponse était : %s</string>
    <string name="almost_correct">Presque ! Réessayez.</string>
    <string name="session_result">Score : %1$d/%2$d</string>
    <string name="session_finished">Session terminée</string>
    <string name="review_mistakes_message">Votre score est de %1$d/%2$d.\nVous avez fait %3$d erreur(s). Voulez-vous les rejouer maintenant ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="select_answer">Veuillez sélectionner une réponse</string>
</resources>